--- a/data/rsvp.yml
+++ b/data/rsvp.yml
@@ -1,4 +1,4 @@
-style: "style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+style: "style1 orient-right content-align-left"
 id: "first"
 title : "RSVP (Thank you!)"
 content: |
