Added google form link

--- a/data/header.yml
+++ b/data/header.yml
@@ -8,6 +8,6 @@ content : |
   of live music, crusing and boozing.
 button:
   label : "RSVP 🚢❤️🥂"
-  link : "#first"
+  link : "#rsvp"
 image : "images/flyer.jpg"
 
