Fixed form link

--- a/data/rsvp.yml
+++ b/data/rsvp.yml
@@ -6,6 +6,6 @@ content: |
   If you have any questions or just want to say hullo feel free to contact Devon or Miranda via
   email. Help us plan our food and beverage purchacing by following the link to the RSVP.
 button: 
-  label: "RSVP Google Form"
+  label: "RSVP Form"
   link: "https://forms.gle/dhx4ujQincKrH5nK7"
 image: "images/us-1.jpg"
