--- a/data/party.yml
+++ b/data/party.yml
@@ -3,16 +3,20 @@ style: "style1 medium onscroll-fade-in"
 items:
   - name: "💃🎶🕺🎉"
     content: |
-      The ship has an awesome dance floor, we plan to have several live performances and a DJ,
-      no shortage of great music to score the night.
+      Get ready to dance the night away on the rhythmic waves of the Bay Mist! Our party,
+      helmed by Maine’s finest live musicians and DJs, will beckon you on the dance floor for a
+      night of non-stop fun.
     style: "solid style2 major"
   - name : "👗👔👕👚"
     content : |
-      Semi-formal or Cocktail attire is suggested. The plan is to dance though so be comfortable!
-      Note that the boat is enclosed in heated so there's no need to dress for the elements.
+      Dress to impress in your favorite cocktail threads that allow you to tear up the dance floor
+      uninhibited. We encourage a splash of bright, cheerful hues to complement our maritime
+      backdrop. The ship is enclosed and heated, so no need to dress for the ocean elements.
     style : "style2 major"
   - name : "🍕🍰🍻🍷"
     content: |
-      We will be providing some light faire throughout the evening. Think pizza and a few desserts.
-      We'll be providing an open bar. Yes! There's a bar! On a Boat!
+      To balance out the open bar (yes, the boat has a bar!), we’ll be serving some light fare and
+      desserts to keep you fueled for an evening of revelry. We encourage you to eat dinner prior
+      to your arrival, as this event is happening following a private dinner and ceremony attended
+      by family.
     style : "solid style2 major"
