--- a/data/party.yml
+++ b/data/party.yml
@@ -13,7 +13,7 @@ items:
       uninhibited. We encourage a splash of bright, cheerful hues to complement our maritime
       backdrop. The ship is enclosed and heated, so no need to dress for the ocean elements.
     style : "style2 major"
-  - name : "🍕🍰🍻🍷"
+  - name : "🍕🍩🍷🍻"
     content: |
       To balance out the open bar (yes, the boat has a bar!), we’ll be serving some light fare and
       desserts to keep you fueled for an evening of revelry. We encourage you to eat dinner prior
