--- a/data/rsvp.yml
+++ b/data/rsvp.yml
@@ -9,4 +9,5 @@ content: |
 button: 
   label: "RSVP Form"
   link: "https://forms.gle/dhx4ujQincKrH5nK7"
+  button_tag: 'target="_blank"'
 image: "images/us-1.jpg"
