Clarity changes from feedback

--- a/data/party.yml
+++ b/data/party.yml
@@ -15,8 +15,8 @@ items:
     style : "style2 major"
   - name : "🍕🍩🍷🍻"
     content: |
-      To balance out the open bar (yes, the boat has a bar!), we’ll be serving some light fare and
-      desserts to keep you fueled for an evening of revelry. We encourage you to eat dinner prior
-      to your arrival, as this event is happening following a private dinner and ceremony attended
+      To balance out the open bar (yes, the boat has a bar!), we’ll be serving pizza and donuts
+      keep you fueled for an evening of revelry. We encourage you to eat dinner prior to your
+      arrival, as this event is happening following a private dinner and ceremony attended
       by family.
     style : "solid style2 major"
