--- a/data/header.yml
+++ b/data/header.yml
@@ -1,7 +1,7 @@
 style: "style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
 title : "Devon and Miranda's Wedding Celebration!"
 subtitle: |
-  The party sets sail Saturday, May 18<sup>th</sup> 2024 in Portland, Maine.
+  The party sets sail Saturday, May 18<sup>th</sup> 2024 in Portland, Maine, at 7pm.
 content : |
   We invite you to share in the joy of our union aboard the Bay Mist, raising glasses to love,
   live music, and Portland’s picturesque Casco Bay. Your presence will make our celebration complete
