Switched to large gallery size

--- a/data/photos_gallery.yml
+++ b/data/photos_gallery.yml
@@ -1,4 +1,4 @@
-style: "style1 medium"
+style: "style1 big"
 pictures:
   - image: "/images/photos_section/ps_6.jpeg"
   - image: "/images/photos_section/ps_2.jpeg"
